--- a/final_pjt_front/package.json
+++ b/final_pjt_front/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "run": "^1.4.0",
     "serve": "^14.2.0",
