--- a/final_pjt_front/package.json
+++ b/final_pjt_front/package.json
@@ -13,7 +13,9 @@
     "core-js": "^3.8.3",
     "run": "^1.4.0",
     "serve": "^14.2.0",
+    "swiper": "^6.8.4",
     "vue": "^2.6.14",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
     "vuex-persistedstate": "^4.1.0"
